--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,13 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Vietnamese Training Data
+wavs/
+metadata.csv
+*.pkl
+checkpoints/
+output*.wav
+
+# IDE
+.idea/
